--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "required_api_version": "^2.0.0",
   "name": "Sesh Session Manager",
   "description": "Quickly find and switch to sesh sessions.",
-  "developer_name": "Gemini pro 2.5 and human",
+  "developer_name": "afkdev8",
   "icon": "images/sesh-icon.png",
   "options": {
     "query_debounce": 0.1
