--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "required_api_version": "^2.0.0",
-  "name": "Sesh Session Manager",
-  "description": "Quickly find and switch to sesh sessions.",
+  "name": "SESHion Manager",
+  "description": "Quickly find and switch to tmux/sesh sessions.",
   "developer_name": "afkdev8",
   "icon": "images/sesh.png",
   "options": {
